<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/contacts_app"
        android:textAllCaps="true"
        android:textColor="@color/primary_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivMood"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/happy"
        android:focusable="true" />

    <ImageView
        android:id="@+id/phn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/web"
        android:focusable="true"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageView
        android:id="@+id/web"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/web"
        android:focusable="true"
        app:srcCompat="@drawable/web" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:contentDescription="@string/location"
        android:focusable="true"
        app:srcCompat="@drawable/map" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/primary_dark"
        android:text="@string/create_new_contact"
        android:textAllCaps="true"
        android:textColor="#FFFFFF" />

</LinearLayout>