<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_light"
    tools:context=".Create_New_Contact">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/please_enter_your_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/please_enter_your_contact_number"
        android:inputType="number"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/please_enter_your_web"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/please_enter_your_address"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/happy"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/happy"
            android:focusable="true"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/ok"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/ok"
            android:focusable="true"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/sad"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/sad"
            android:focusable="true"
            android:contentDescription="TODO" />
    </LinearLayout>
</LinearLayout>